--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,3 +7,9 @@ body, html, h1, h2, h3, h4, h5, h6, p, ul, li {
   padding: 0;
 }
 
+body{
+  background-image: url("https://images.pexels.com/photos/1843717/pexels-photo-1843717.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  background-attachment: fixed;
+  background-size: cover;
+  
+}
