--- a/client/src/components/SubTask/subtask.css
+++ b/client/src/components/SubTask/subtask.css
@@ -20,9 +20,9 @@
   outline: none;
 }
 
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+::placeholder { 
   color: white;
-  opacity: 1; /* Firefox */
+  opacity: 1; 
 }
 
 .taskInput i{
