--- a/client/src/components/Task/task.css
+++ b/client/src/components/Task/task.css
@@ -1,7 +1,7 @@
 .task{
   background-color: white;
   color: steelblue;
-  padding: 5px;
+  padding: 10px;
   display: grid;
   justify-content: space-between;
   grid-template-columns: 5fr 1fr;
@@ -9,6 +9,35 @@
   min-height: 60px;
   border-radius: 13px;
   align-items: center;
+  box-shadow: 5px 5px 8px black;
+  transition: all, .25s;
+  transform: scale(0);
+  opacity: 0;
+  animation-name: loadAnimation;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes loadAnimation{
+  0% {opacity:0; transform:scale(0)}
+  100% {opacity: 1; transform: scale(1)}
+}
+
+.task:hover{
+  box-shadow: none;
+  transition: all, .25s;
+}
+
+.taskLeave{
+  position: relative;
+  animation-name: leave;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes leave {
+  0% {opacity:1; transform:scale(1)}
+  100% {opacity: 0; transform: scale(0)}
 }
 
 .taskBtnGroup{
@@ -25,7 +54,7 @@
 }
 
 .comp{
-  color: darkblue;
+  color: steelblue;
 }
 
 .notComp{
